Made a scrapper for h&m and made clothing entity and dto

--- a/SwipeStyle/src/main/resources/application.properties
+++ b/SwipeStyle/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=always
 
 selenium.headless=false
+
+app.service.urls=https://www.zara.com/in/en/man-all-products-l7465.html,\
+  https://www.zara.com/in/en/woman-new-in-l1180.html,\
+  https://www2.hm.com/en_in/men/shop-by-product/view-all.html,\
+  https://www2.hm.com/en_in/women/shop-by-product/view-all.html
+
