--- a/SwipeStyle/pom.xml
+++ b/SwipeStyle/pom.xml
@@ -49,6 +49,11 @@
 			<version>1.17.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.jobrunr</groupId>
+			<artifactId>jobrunr-spring-boot-3-starter</artifactId>
+			<version>6.2.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
@@ -64,7 +69,7 @@
 		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
-			<version>5.6.2</version>
+			<version>5.6.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
