--- a/SwipeStyle/src/main/resources/application.properties
+++ b/SwipeStyle/src/main/resources/application.properties
@@ -15,3 +15,5 @@ app.service.urls=https://www.zara.com/in/en/man-all-products-l7465.html,\
   https://www2.hm.com/en_in/men/shop-by-product/view-all.html,\
   https://www2.hm.com/en_in/women/shop-by-product/view-all.html
 
+org.jobrunr.background-job-server.enabled=true
+org.jobrunr.dashboard.enabled=true
