--- a/SwipeStyle/src/main/resources/application.properties
+++ b/SwipeStyle/src/main/resources/application.properties
@@ -8,12 +8,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=always
 
-selenium.headless=false
+selenium.headless=true
 
-app.service.urls=https://www.zara.com/in/en/man-all-products-l7465.html,\
-  https://www.zara.com/in/en/woman-new-in-l1180.html,\
-  https://www2.hm.com/en_in/men/shop-by-product/view-all.html,\
-  https://www2.hm.com/en_in/women/shop-by-product/view-all.html
-
+app.service.urls =  https://www.zara.com/in/en/woman-new-in-l1180.html,https://www.zara.com/in/en/man-all-products-l7465.html,https://www2.hm.com/en_in/men/shop-by-product/view-all.html,https://www2.hm.com/en_in/women/shop-by-product/view-all.html
 org.jobrunr.background-job-server.enabled=true
 org.jobrunr.dashboard.enabled=true
