--- a/SwipeStyle/src/main/resources/application.properties
+++ b/SwipeStyle/src/main/resources/application.properties
@@ -13,3 +13,13 @@ selenium.headless=true
 app.service.urls =  https://www.zara.com/in/en/woman-new-in-l1180.html,https://www.zara.com/in/en/man-all-products-l7465.html,https://www2.hm.com/en_in/men/shop-by-product/view-all.html,https://www2.hm.com/en_in/women/shop-by-product/view-all.html
 org.jobrunr.background-job-server.enabled=true
 org.jobrunr.dashboard.enabled=true
+
+server.servlet.session.timeout=6h
+server.servlet.session.persistent=true
+
+# Google OAuth2
+spring.security.oauth2.client.registration.google.client-id=21497114449-gduj43uk0eiuh1rorojh51ta29dbsv1q.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
+
+spring.session.jdbc.initialize-schema=always
