--- a/swipestylefrontend/package.json
+++ b/swipestylefrontend/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
