Added continous fetching and added card details

--- a/SwipeStyle/src/main/resources/application.properties
+++ b/SwipeStyle/src/main/resources/application.properties
@@ -14,6 +14,12 @@ app.service.urls =https://www.zara.com/in/en/woman-new-in-l1180.html,https://www
 org.jobrunr.background-job-server.enabled=true
 org.jobrunr.dashboard.enabled=true
 
+# New continuous scraping properties
+app.scraper.continuous.enabled=true
+app.scraper.continuous.interval.minutes=5
+app.scraper.continuous.max.pages=50
+app.scraper.continuous.products.threshold=10
+
 server.servlet.session.timeout=6h
 server.servlet.session.persistent=true
 
