--- a/swipestylefrontend/package.json
+++ b/swipestylefrontend/package.json
@@ -17,9 +17,11 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.515.0",
+    "motion": "^12.18.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router": "^7.6.2",
     "tailwindcss": "^4.1.10",
     "yup": "^1.6.1"
