--- a/SwipeStyle/src/main/resources/application.properties
+++ b/SwipeStyle/src/main/resources/application.properties
@@ -15,7 +15,7 @@ org.jobrunr.background-job-server.enabled=true
 org.jobrunr.dashboard.enabled=true
 
 # New continuous scraping properties
-app.scraper.continuous.enabled=true
+app.scraper.continuous.enabled=false
 app.scraper.continuous.interval.minutes=5
 app.scraper.continuous.max.pages=50
 app.scraper.continuous.products.threshold=10
