Fixed body, cleaned code, and made a recommendation system

--- a/SwipeStyle/src/main/resources/application.properties
+++ b/SwipeStyle/src/main/resources/application.properties
@@ -15,7 +15,7 @@ org.jobrunr.background-job-server.enabled=true
 org.jobrunr.dashboard.enabled=true
 
 # New continuous scraping properties
-app.scraper.continuous.enabled=false
+app.scraper.continuous.enabled=true
 app.scraper.continuous.interval.minutes=5
 app.scraper.continuous.max.pages=50
 app.scraper.continuous.products.threshold=10
@@ -29,3 +29,5 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-q0KB85oV6
 spring.security.oauth2.client.registration.google.scope=email,profile
 
 spring.session.jdbc.initialize-schema=always
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
