--- a/swipestylebackend/src/main/resources/application.properties
+++ b/swipestylebackend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=SwipeStyle
-spring.datasource.url=jdbc:postgresql://localhost:5432/swipestyle
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/swipestyle}
+spring.datasource.username=${DATABASE_USERNAME:swipestyle}
+spring.datasource.password=${DATABASE_PASSWORD:password}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -23,11 +23,9 @@ app.scraper.continuous.products.threshold=10
 server.servlet.session.timeout=6h
 server.servlet.session.persistent=true
 
-# Google OAuth2
-spring.security.oauth2.client.registration.google.client-id=21497114449-gduj43uk0eiuh1rorojh51ta29dbsv1q.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=email,profile
 
 spring.session.jdbc.initialize-schema=always
-
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
