--- a/swipestylebackend/src/main/resources/application.properties
+++ b/swipestylebackend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=SwipeStyle
 spring.datasource.url=jdbc:postgresql://localhost:5432/swipestyle
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -15,16 +15,22 @@ org.jobrunr.background-job-server.enabled=true
 org.jobrunr.dashboard.enabled=true
 
 # New continuous scraping properties
-app.scraper.continuous.enabled=true
+app.scraper.continuous.enabled=false
 app.scraper.continuous.interval.minutes=5
 app.scraper.continuous.max.pages=50
 app.scraper.continuous.products.threshold=10
 
 server.servlet.session.timeout=6h
 server.servlet.session.persistent=true
+# Session configuration
+server.servlet.session.cookie.same-site=lax
+server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.domain=localhost
+server.servlet.session.cookie.name=JSESSIONID
 
-spring.security.oauth2.client.registration.google.client-id=21497114449-gduj43uk0eiuh1rorojh51ta29dbsv1q.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=email,profile
 
 spring.session.jdbc.initialize-schema=always
